// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formulář s chybou 1`] = `
<div
  className="Prihlaseni_div"
>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlaseni_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kategorie"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
      </Col>
      <FormGroup
        bsClass="form-group"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="success"
          disabled={false}
          type="submit"
        >
          Uložit 
          stávajícího
           účastníka
        </Button>
      </FormGroup>
    </Form>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={false}
      onClick={[Function]}
    >
      Reset
    </Button>
    <HideableError
      code="chybový kód"
      message="Popisek chyby, která se stala."
      onHideError={[Function]}
      title="Chyba při ukládání!"
    />
  </Grid>
</div>
`;

exports[`formulář s existujícím účastníkem 1`] = `
<div
  className="Prihlaseni_div"
>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlaseni_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kategorie"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
      </Col>
      <FormGroup
        bsClass="form-group"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="success"
          disabled={false}
          type="submit"
        >
          Uložit 
          stávajícího
           účastníka
        </Button>
      </FormGroup>
    </Form>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={false}
      onClick={[Function]}
    >
      Reset
    </Button>
  </Grid>
</div>
`;

exports[`formulář s existujícím účastníkem při ukládání 1`] = `
<div
  className="Prihlaseni_div"
>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlaseni_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kategorie"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
      </Col>
      <FormGroup
        bsClass="form-group"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="success"
          disabled={false}
          type="submit"
        >
          Uložit 
          stávajícího
           účastníka
        </Button>
      </FormGroup>
    </Form>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={false}
      onClick={[Function]}
    >
      Reset
    </Button>
    <div>
      <LoadingIndicator />
       Probíhá ukládání...
    </div>
  </Grid>
</div>
`;

exports[`prázdný formulář 1`] = `
<div
  className="Prihlaseni_div"
>
  <Grid
    bsClass="container"
    componentClass="div"
    fluid={false}
  >
    <Form
      autoComplete="off"
      bsClass="form"
      className="Prihlaseni_form"
      componentClass="form"
      horizontal={true}
      inline={false}
      onSubmit={[Function]}
    >
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Údaje"
        >
          <Connect(Input)
            Type={[Function]}
            name="udaje.prijmeni"
            popisek="příjmení"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.jmeno"
            popisek="jméno"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.pohlavi"
            popisek="pohlaví"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.adresa"
            popisek="adresa"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.obec"
            popisek="obec"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.psc"
            popisek="PSČ"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.stat"
            popisek="stát"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.klub"
            popisek="klub"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.email"
            popisek="email"
          />
          <Connect(Input)
            Type={[Function]}
            name="udaje.telefon"
            popisek="telefon"
          />
        </Panel>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        sm={6}
      >
        <Panel
          bsClass="panel"
          bsStyle="primary"
          defaultExpanded={false}
          header="Přihláška"
        >
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.datum"
            popisek="datum"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kategorie"
            popisek="kategorie"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.startCislo"
            popisek="číslo"
          />
          <Connect(Input)
            Type={[Function]}
            name="prihlaska.kod"
            popisek="kód"
          />
        </Panel>
      </Col>
      <FormGroup
        bsClass="form-group"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="success"
          disabled={false}
          type="submit"
        >
          Uložit 
          nového
           účastníka
        </Button>
      </FormGroup>
    </Form>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="danger"
      disabled={false}
      onClick={[Function]}
    >
      Reset
    </Button>
  </Grid>
</div>
`;

exports[`při načítání 1`] = `
<div>
  <span
    className="LoadingIndicator glyphicon glyphicon-repeat"
  />
   Načítám účastníky...
</div>
`;
